assets/styles/_base.css
/* ... */
.centerMaxWidthContainer {
  margin-inline: auto;
  max-width: var(--container-max-width);
  padding-inline: var(--container-padding);
}

.centerMaxWidthContainerLarge {
  margin-inline: auto;
  max-width: var(--container-max-width-large);
  padding-inline: var(--container-padding);
}

.centerContentMaxWidth {
  margin-inline: auto;
  max-width: var(--content-max-width);
}

.centerContentMaxWidthLarge {
  margin-inline: auto;
  max-width: var(--content-max-width-large);
}

.flowContent {
  > * + * {
    margin-block-start: var(--flow-space);
  }
}

.preContent {
  margin: 0 auto calc(var(--component-spacing) / 2);
  max-width: var(--content-max-width);
  text-align: center;
}

.postContent {
  margin: calc(var(--component-spacing) / 2) auto 0;
  max-width: var(--content-max-width);
  text-align: center;
}

.scrollableTableWrapper {
  -webkit-overflow-scrolling: touch;
  overflow-x: auto;
}

/* Class for text that should only be visible to screen readers */
.visuallyHidden {
  clip: rect(0, 0, 0, 0) !important;
  height: 1px !important;
  margin: -1px !important; /* Fix for https://github.com/twbs/bootstrap/issues/25686 */
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  white-space: nowrap !important;
  width: 1px !important;
}

/* Skip link behavior */
.skipLink {
  inset-block-start: -100px;
  position: fixed;
  z-index: 999;

  &:focus {
    inset-block-start: 0;
  }
}

/**
* Box Helpers
*/

.boxPadding {
  padding: var(--box-padding);
}

.boxBorder {
  border: solid 2px var(--borderColor);
}

.noScroll {
  overflow: hidden;
}

/**
* Themes
*/

[data-theme] {
  background-color: var(--bgColor);
  color: var(--textColor);
}

/**
* Swiper stuff
*/

.swiper-scrollbar-drag {
  height: 4px !important;
  border-radius: 0 !important;
  background-color: currentColor !important;
}

[name='BlockCarouselCities'] {
  .swiper-container {
    .swiper-slide.city-slide {
        aspect-ratio: 230 / 292;
    }
  }

  @screen md {
    .swiper-container {
      clip-path: inset( -100vw -100vw -100vw 0 );
      .swiper-slide.city-slide {
        aspect-ratio: auto;
        width: 315px;
        height: 400px;
      }
    }
  }
}

.swiper-button-disabled {
  opacity: .6;
}

.slider-button {
  &:hover {
    circle {
      fill: var(--lightblue);
      stroke: var(--lightblue);
    }
    g {
      stroke: white;
    }
  }
  &:active {
    circle {
      fill: var(--bluepressed);
      stroke: var(--bluepressed);
    }
    g {
      stroke: white;
    }
  }
}

